# flask-auth-system

./: .gitignore  .replit  Pasted--conversation-utils-py-import-json-import-os-from-datetime-import-datetime-timezone-def-loa-1729719204532.txt  Pasted--email-utils-py-from-email-header-import-decode-header-from-bs4-import-BeautifulSoup-import-re-1729717253999.txt  Pasted-Owner-avatar-flask-auth-system-Public-Alujan18-flask-auth-system-Go-to-file-t-Add-file-Folder-1729762410649.txt  Pasted-import-imaplib-import-email-from-email-message-import-EmailMessage-import-smtplib-from-dotenv-im-1729715982653.txt  api_gpt.py  app.py  commit_and_push.py  conversation_utils.py  conversations.json  create_test_user.py  email_client.py  email_utils.py  git_push.py  main.py  models.py  prompt_builder.py  pyproject.toml  recreate_db.py  routes.py  update_database.py
agente_ia/prompt/: prompt.txt
static/: style.css
templates/: agente_configuracion.html  agente_dashboard.html  agente_database.html  agente_logs.html  agente_main.html  agente_prompt.html  agente_recursos.html  base.html  change_password.html  dashboard.html  login.html  nav_tabs.html  profile.html  register.html
templates/agente/: agente_configuracion.html  agente_dashboard.html  agente_database.html  agente_logs.html  agente_nav_tabs.html  agente_prompt.html  agente_recursos.html
uploads/info/: info_principal.txt
